--- a/package.json
+++ b/package.json
@@ -14,18 +14,23 @@
   "devDependencies": {
     "@astrojs/check": "^0.5.10",
     "@astrojs/mdx": "^2.3.1",
+    "@astrojs/rss": "^4.0.7",
     "@astrojs/solid-js": "^4.4.0",
     "@astrojs/ts-plugin": "^1.8.0",
     "@cloudinary/url-gen": "^1.19.0",
     "@solidjs/testing-library": "^0.8.8",
     "@testing-library/user-event": "^14.5.2",
+    "@types/markdown-it": "^14.1.1",
+    "@types/sanitize-html": "^2.11.0",
     "astro": "^4.11.0",
     "eslint": "^8.57.0",
     "eslint-plugin-astro": "^0.33.1",
     "eslint-plugin-solid": "^0.13.2",
     "happy-dom": "^14.12.3",
+    "markdown-it": "^14.1.0",
     "prettier": "^3.3.2",
     "prettier-plugin-astro": "^0.13.0",
+    "sanitize-html": "^2.13.0",
     "sharp": "^0.33.4",
     "solid-js": "^1.8.17",
     "typescript": "^5.5.2",
