--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "solid-js": "^1.8.17",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1",
+    "vite": "^5.3.2",
     "vitest": "^1.6.0"
   }
 }
